2009-05-09  Francois Felix Ingrand  <felix@ingrand.net>

	* oprs-type.c (debackslashify): Fixed a bug where I would report a
	"fake newline" in a string, which would greatly confuse the
	flex/bison parser about where errors are located.

2009-05-08  Francois Felix Ingrand  <felix@ingrand.net>

	* yacc-exp.y: Try to be more explicit about where we have a badly
	formed expression.


2009-03-30  Francois Felix Ingrand  <felix@ingrand.net>

	* ope-graphic.c (draw_node): Replaced XmStringDrawImage with
	XmStringDraw and it seems to work... this is rather puzzling... I
	will try to figure out why another time...

2008-07-01  Francois Felix Ingrand  <felix@ingrand.net>

	* Passage a git... not quite yet...

2008-04-03  Francois Felix Ingrand  <felix@ingrand.net>

	* ev-function.c (find_intention_id_ef): now return NIL if nothing found.

2007-12-04  Francois Felix Ingrand  <felix@ingrand.net>

	* oprs-parser.y: list_functions, not list_pred_func.
	

2007-10-17  Francois Felix Ingrand  <felix@ingrand.net>

	* lex-parser-def.l (YY_INPUT):
	yy_current_buffer->yy_is_interactive is replaced with
	YY_CURRENT_BUFFER->yy_is_interactive to please flex >2.5.4
	removed #if 0 code...

2007-06-22  Maxime Ransan  <mransan@laas.fr>

	* action.c: add 3 functions to enable openprs to write in multiple
	files. Those functions were originally meant to enable several lof
	files for an openprs application. (functions are: action_log_init
	, action_log_printf , action_log_end).

	* new_default.opf: add the corresponding action OPs to interface
	with the functions listed above.

2006-08-30  Francois Felix Ingrand  <felix@ingrand.net>

	* ev-function.c : LONG_LONG are now properly supported thru all
	evaluable functions using INTEGER (+, - , * , / etc...)

	* ev-predicate.c : LONG_LONG are now properly supported thru all
	evaluable predicates using INTEGER... (ABS, <, >, <=, >=, NUMBERP

2006-08-28  Francois Felix Ingrand  <felix@ingrand.net>
